# Position-Independent-Runtime

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  IDE.md  README.md  STRUCTURE.md  TOOLCHAIN.md  article.md  bugfix.md  install.sh  install_toolchain.md  sizes.json
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/workflows/: build-android-aarch64.yml  build-android-armv7a.yml  build-android-x86_64.yml  build-freebsd-aarch64.yml  build-freebsd-i386.yml  build-freebsd-riscv64.yml  build-freebsd-x86_64.yml  build-ios-aarch64.yml  build-linux-aarch64.yml  build-linux-armv7a.yml  build-linux-i386.yml  build-linux-mips64.yml  build-linux-riscv32.yml  build-linux-riscv64.yml  build-linux-x86_64.yml  build-macos-aarch64.yml  build-macos-x86_64.yml  build-openbsd-aarch64.yml  build-openbsd-i386.yml  build-openbsd-x86_64.yml  build-solaris-aarch64.yml  build-solaris-i386.yml  build-solaris-x86_64.yml  build-uefi-aarch64.yml  build-uefi-x86_64.yml  build-windows-aarch64.yml  build-windows-armv7a.yml  build-windows-i386.yml  build-windows-x86_64.yml  build.yml  ci.yml  docs.yml  release.yml  size-regression.yml  size-report.yml
cmake/: Base64Encode.cmake  Common.cmake  CompilerFlags.cmake  Linux.cmake  Options.cmake  PICTransform.cmake  PostBuild.cmake  RunObjdump.cmake  RunStrings.cmake  Sources.cmake  Target.cmake  Triples.cmake  UEFI.cmake  VerifyPICMode.cmake  Windows.cmake  base64_encode.cmake  macOS.cmake  toolchain-clang.cmake  verify_no_rdata.cmake
cmake/data/: linker.freebsd.riscv64.ld
cmake/scripts/: ExtractBinary.cmake  PatchElfOSABI.cmake  RemoveGnuStack.cmake  RemovePhdr.cmake  VerifyPICMode.cmake
docs/: LANGUAGE.md  SCRIPT_TODO.md  TOOLCHAIN.md  architecture.md  language.md  platform_guide.md
include/: runtime.h
include/algorithms/: base64.h
include/bal/: bal.h  math.h  string.h
include/core/: binaryWriter.h  binary_reader.h  binary_writer.h  bitops.h  core.h  error.h
include/crypt/: chacha20.h  chacha20_encoder.h  ecc.h  sha2.h
include/io/: console.h  file_system.h  logger.h  path.h
include/language/: ast.h  fileio.h  lexer.h  networkio.h  pool.h  token.h
include/network/: dns.h  http.h  ip_address.h  socket.h  websocket.h
include/pal/: console.h  date_time.h  ip_address.h  pal.h  socket.h
include/pil/: ast.h  fileio.h  lexer.h  networkio.h  pool.h  script.h  stdlib.h  token.h  value.h
include/ral/: logger.h  ral.h
include/runtime/: console.h  logger.h  memory.h  runtime.h  string.h
include/system/: date_time.h  process.h  random.h
platform/: platform.h
scripts/: README.md  install.sh  loader.ps1  loader.py  remote_loader.py  run-uefi-qemu.ps1  run-uefi-qemu.sh  run_uefi.py
sizes/: 2026-02-05_113d24a.json  2026-02-05_1776b0b.json  2026-02-05_2dab504.json  2026-02-05_34e5d2a.json  2026-02-05_4a11942.json  2026-02-05_4abf94a.json  2026-02-06_4fe05d7.json  2026-02-06_84d3e36.json  2026-02-08_1ca1f25.json  2026-02-09_b438f7f.json  2026-02-10_2f5b5b5.json  2026-02-12_e68b506.json  2026-02-23_5b6204d.json  2026-02-24_08cb4ec.json  2026-02-24_17b0437.json  2026-02-24_25572de.json  2026-02-24_2a2f24d.json  2026-02-24_300eef6.json  2026-02-24_3725565.json  2026-02-24_71cd3d9.json  2026-02-24_97bf2fc.json  2026-02-24_982dd39.json  2026-02-24_a3f98c6.json  2026-02-24_ab4cc8f.json  2026-02-24_fe33d1c.json  2026-02-24_ffa2ce5.json  2026-02-26_0650d9a.json  2026-02-26_664afb7.json  2026-02-26_91a434c.json  2026-02-26_a62ae30.json  2026-02-26_ff4718e.json  2026-02-27_9770ec7.json  2026-02-27_aaf5f4c.json  2026-02-27_ca792af.json  2026-02-28_012bd0c.json  2026-02-28_02d03f5.json  2026-02-28_21fa393.json  2026-02-28_25e4f62.json  2026-02-28_29f31f1.json  2026-02-28_43e31c8.json  (+120 more)
src/: script_example.cc  start.cc
src/algorithms/: base64.cc
src/core/: arm_eabi_runtime.cc  core.h  ip_address.cc
src/crypt/: chacha20.cc  chacha20_encoder.cc  ecc.cc  sha2.cc
src/io/: console.cc
src/network/: dns.cc  http.cc  ip_address.cc  websocket.cc
src/pal/: aeabi_runtime.cc  ip_address.cc  pal.cc  random.cc
src/platform/: platform.h
src/runtime/: entry_point.cc  runtime.h  string.cc
src/system/: date_time.cc  random.cc
tests/: README.md  array_storage_tests.h  base64_tests.h  binary_io_tests.h  djb2_tests.h  dns_tests.h  double_tests.h  ecc_tests.h  file_system_tests.h  filesystem_tests.h  image_tests.h  ip_address_tests.h  jpeg_tests.h  main.cc  memory_tests.h  pipe_tests.h  pir_tests.h  prng_tests.h  process_tests.h  random_tests.h  result_tests.h  screen_tests.h  sha_tests.h  size_report_tests.h  socket_tests.h  span_tests.h  string_formatter_tests.h  string_tests.h  tests.h  tls_tests.h  uuid_tests.h  vector_tests.h  websocket_tests.h
tests/language/: error_tests.h  state_tests.h  stdlib_tests.h  test_framework.h
tests/pil/: error_tests.h  float_tests.h  language_tests.h  pil_tests.h  state_tests.h  stdlib_tests.h  test_framework.h
tests/runtime/: array_storage_tests.h  base64_tests.h  djb2_tests.h  dns_tests.h  double_tests.h  ecc_tests.h  filesystem_tests.h  memory_tests.h  random_tests.h  (+6 more)
tools/pic-transform/: CMakeLists.txt  PICTransformOpt.cpp  PICTransformPass.cpp
(+451 files in other folders)
